compiler/lib/test/parser_golden/fstring_invalid_format.golden
ERROR: 1:2:
  |
1 | f"Invalid format specifier {name:@Z}"
  |  ^^^
unexpected ""In"
expecting "%=", "&=", "**=", "*=", "+=", "-=", "//=", "/=", "<<=", ">>=", "@=", "^=", "|=", ':', '=', call arguments, slice/index expression, or comma
